# pager

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/utils/: giphy.py  message.py  types.py  ws_client.py
src/utils/pages/: __init__.py  chat.py  login.py
src/utils/pages/components/: chat.py  login.py
tests/: pytest.ini
tests/api/: test_login.py  test_send_message.py  test_typing.py
tests/browser/: conftest.py  test_listen_for_message.py  test_login.py  test_send_message.py  test_typing.py
